fix: Improve formatting

--- a/resume.tex
+++ b/resume.tex
@@ -62,11 +62,11 @@
 }
 
 \newcommand{\resumeSubheading}[4]{
-  \vspace{-1pt}\item
+  \vspace{0pt}\item
     \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
-      \textit{\small#3} & \textit{\small #4} \vspace{5pt} \\
-    \end{tabular*}\vspace{-0pt}
+      \textit{\small#3} & \textit{\small #4}\vspace{5pt}\\
+    \end{tabular*}\vspace{0pt}
 }
 
 \newcommand{\resumeSubSubheading}[2]{
@@ -118,9 +118,7 @@
     \resumeSubheading
       {\href{https://americantours.com/}{AmericanTours International, LLC}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Software Engineer}{Nov 2019 – Present}
-
-      {\small\textbf{Technologies}: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
-
+      {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
       \resumeItemListStart
         \resumeItem
           {Led an engineering team of two in charge of implementing a modern, fast, and aesthetic re-imagining of ATI's internal administration tool used by travel agents for payment and transaction review, and processing.}
@@ -131,7 +129,7 @@
         \resumeItem
           {Implemented auto-refresh mechanism of JWT token.}
         \resumeItem
-          {Implemented data tables with pagination, sorting, expandable rows with sub-component rendering and sub-tables.}
+          {Implemented data tables with pagination, sorting, expandable rows with sub-component rendering.}
         \resumeItem
           {Implemented custom column filters for tables, e.g. text, date (with date picker widget), number range, and select.}
         \resumeItem
@@ -147,9 +145,7 @@
     \resumeSubheading
       {\href{https://www.switchfly.com/}{Switchfly, LLC}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Software Engineer}{Feb 2014 – Aug 2019}
-
-      {\small\textbf{Technologies}: JavaScript, Java, HTML, CSS, Sass (SCSS), Ember.js, Handlebars.js, Git, Gulp, JSHint, Karma, Mocha, Chai, npm, jQuery, Selenium, Jenkins, Ant, Maven, FreeMarker, ColdFusion, PostgreSQL, IntelliJ IDEA}
-
+      {\footnotesize Technologies: JavaScript, Java, HTML, CSS, Sass (SCSS), Ember.js, Handlebars.js, Git, Gulp, JSHint, Karma, Mocha, Chai, npm, jQuery, Selenium, Jenkins, Ant, Maven, FreeMarker, ColdFusion, PostgreSQL, IntelliJ IDEA}
       \resumeItemListStart
         \resumeItem
           {Implemented interstitial/loading page for better SEO and accessibility.}
@@ -176,13 +172,10 @@
     \resumeSubheading
       {\href{https://evolvemediallc.com/}{Evolve Media, LLC}}{via \href{https://intugo.co/}{Intugo}}
       {Senior Software Engineer}{Jul 2013 – Feb 2014\vspace{-5pt}}
-
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
         \textit{\small{Software Engineer}} & \textit{\small{Jul 2012 – Jul 2013}}\vspace{5pt} \\
       \end{tabular*}\vspace{-0pt}
-
-      {\small\textbf{Technologies}: JavaScript, PHP, WordPress, HTML, CSS with Sass (SCSS), Compass, and Susy, jQuery, SVN with git-svn, Jenkins, Ant, npm, Grunt, JSHint, Capistrano}
-
+      {\footnotesize Technologies: JavaScript, PHP, WordPress, HTML, CSS with Sass (SCSS), Compass, and Susy, jQuery, SVN with git-svn, Jenkins, Ant, npm, Grunt, JSHint, Capistrano}
       \resumeItemListStart
         \resumeItem
           {Worked as Software Engineer focused on Front End Engineering for multiple heavily trafficked and highly ranked websites targeting, among other things: women, fashion, sports, gaming and entertainment.}
@@ -191,8 +184,7 @@
     \resumeSubheading
       {\href{https://www.optum.com/}{OptumInsight}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Application Development Engineer}{Jan 2009 – Jun 2012}
-      {\small\textbf{Technologies}: Java, Java EE, Servlets, JavaScript, LotusScript, Formula Language, Lotus Notes, Lotus Domino, Tomcat, HTML, CSS, XML, XPath, XSLT, SVN, CVS, RCS, Maven, Ant, Make, Jenkins}
-
+      {\footnotesize Technologies: Java, Java EE, Servlets, JavaScript, LotusScript, Formula Language, Lotus Notes, Lotus Domino, Tomcat, HTML, CSS, XML, XPath, XSLT, SVN, CVS, RCS, Maven, Ant, Make, Jenkins}
       \resumeItemListStart
         \resumeItem
           {Worked as Application Development Engineer extending and maintaining their EMR Lite system, related services and applications.}
