feat: Update dates

--- a/resume.tex
+++ b/resume.tex
@@ -117,7 +117,7 @@
 
     \resumeSubheading
       {\href{https://americantours.com/}{AmericanTours International, LLC}}{via \href{https://nearsoft.com}{Nearsoft}}
-      {Software Engineer}{Nov 2019 – Present}
+      {Software Engineer}{Nov 2019 – Mar 2020}
       {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
       \resumeItemListStart
         \resumeItem
