feat: Add ConsumerTrack

--- a/resume.tex
+++ b/resume.tex
@@ -116,6 +116,15 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
+      {\href{https://www.consumertrack.com/}{ConsumerTrack, Inc.}}{via \href{https://nearsoft.com}{Nearsoft}}
+      {Front End Engineer}{Apr 2020 – Present}
+      {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), Twig, React, Redux, Next.js, Bootstrap, Node.js, npm, Jest, React Testing Library, Babel, ESLint, Husky, Webpack, CircleCI, jQuery, PostCSS, Visual Studio Code, Git}
+      \resumeItemListStart
+        \resumeItem
+          {Focused on Front End Engineering for multiple sites that offer consumers fast and easy online access to their credit score and credit monitoring services via the three national credit bureaus: Experian, Equifax, and TransUnion}
+      \resumeItemListEnd
+
+    \resumeSubheading
       {\href{https://americantours.com/}{AmericanTours International, LLC}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Software Engineer}{Nov 2019 – Mar 2020}
       {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
@@ -150,8 +159,6 @@
         \resumeItem
           {Implemented interstitial/loading page for better SEO and accessibility.}
         \resumeItem
-          {Implemented skeleton/wireframe loading screens for better perceived performance.}
-        \resumeItem
           {Implemented custom responsive navigation with auto-collapsing items based on viewport.}
         \resumeItem
           {Increased performance by implementing preloading of the next page assets.}
@@ -166,7 +173,7 @@
         \resumeItem
           {Refactored codebase to meet AA level of the WCAG 2.0 accessibility standard.}
         \resumeItem
-          {Peer-reviewed other people's code as "Subject Matter Expect" of the shopping process.}
+          {Peer-reviewed other people's code as "Subject Matter Expect" of the shopping experience.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -219,10 +226,10 @@
      \textbf{Software Engineering}{: Agile Software Development, Software Release Cycle, Unit Testing, Integration Testing, End-to-end Testing, Continuous Integration, Software Security, Static Code Analysis}
    }
    \item{
-    \textbf{Front End (Web)}{: HTML, CSS, JavaScript, Web Performance, Web Accessibility, React, React Hooks, Redux, CSS-in-JS, Ember.js, Handlebars.js, jQuery, Sass}
+    \textbf{Front End (Web)}{: HTML, CSS, JavaScript, Web Performance, Web Accessibility, React, React Hooks, Redux, CSS-in-JS, Ember.js, Handlebars.js, jQuery, Sass (SCSS), Bootstrap}
    }
    \item{
-    \textbf{Tools}{: Node.js, npm, Yarn, ESLint, Prettier, XO, AVA, Chai, Jasmine, Mocha, Jest, Karma, Grunt, Gulp, PostCSS, Git, Bash, Zsh, Homebrew, Homebrew Cask, Markdown, VS Code, IntelliJ IDEA}
+    \textbf{Tools}{: Node.js, npm, Yarn, ESLint, Prettier, Jest, React Testing Library, AVA, Chai, Jasmine, Mocha, Karma, Grunt, Gulp, PostCSS, Git, Bash, Zsh, Homebrew, Homebrew Cask, Markdown, Visual Studio Code, IntelliJ IDEA}
    }
  \resumeSubHeadingListEnd
 
