chore: Update credit

--- a/resume.tex
+++ b/resume.tex
@@ -2,7 +2,7 @@
 % My (LaTeX) resume
 % ==========================================================================
 %
-% Original author: Sourabh Bajaj
+% Original author: Sourabh Bajaj (https://github.com/sb2nov/resume)
 % License: MIT
 %
 % ==========================================================================
