chore: Update skills

--- a/resume.tex
+++ b/resume.tex
@@ -226,10 +226,10 @@
      \textbf{Software Engineering}{: Agile Software Development, Software Release Cycle, Unit Testing, Integration Testing, End-to-end Testing, Continuous Integration, Software Security, Static Code Analysis}
    }
    \item{
-    \textbf{Front End (Web)}{: HTML, CSS, JavaScript, Web Performance, Web Accessibility, React, React Hooks, Redux, CSS-in-JS, Ember.js, Handlebars.js, jQuery, Sass (SCSS), Bootstrap}
+    \textbf{Front End (Web)}{: HTML, CSS, JavaScript, Web Performance, Web Accessibility, React, React Hooks, Redux, CSS-in-JS, Sass (SCSS), Bootstrap}
    }
    \item{
-    \textbf{Tools}{: Node.js, npm, Yarn, ESLint, Prettier, Jest, React Testing Library, AVA, Chai, Jasmine, Mocha, Karma, Grunt, Gulp, PostCSS, Git, Bash, Zsh, Homebrew, Homebrew Cask, Markdown, Visual Studio Code, IntelliJ IDEA}
+    \textbf{Tools}{: Node.js, npm, Yarn, ESLint, Prettier, Jest, React Testing Library, Git, Visual Studio Code}
    }
  \resumeSubHeadingListEnd
 
