feat: Update summary

--- a/resume.tex
+++ b/resume.tex
@@ -94,7 +94,7 @@
 \begin{document}
 
 % ==========================================================================
-% Heading
+% Summary
 % ==========================================================================
 
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
@@ -103,7 +103,7 @@
   & LinkedIn: \href{https://linkedin.com/in/alebelcor}{\underline{linkedin.com/in/alebelcor}} \\ \\
 \end{tabular*}
 
-10+ years of experience in Web Development with a specialty and passion for Front End, performance, and accessibility.
+I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of experience with a specialty and passion for UI, Web performance, and Web accessibility.
 
 % ==========================================================================
 
