feat: Specify remote positions

--- a/resume.tex
+++ b/resume.tex
@@ -117,7 +117,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 
     \resumeSubheading
       {\href{https://www.consumertrack.com/}{ConsumerTrack, Inc.}}{via \href{https://nearsoft.com}{Nearsoft}}
-      {Front End Engineer}{Apr 2020 – Present}
+      {Front End Engineer (Remote)}{Apr 2020 – Present}
       {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), Twig, React, Redux, Next.js, Bootstrap, Node.js, npm, Jest, React Testing Library, Babel, ESLint, Husky, Webpack, CircleCI, jQuery, PostCSS, Visual Studio Code, Git}
       \resumeItemListStart
         \resumeItem
@@ -126,7 +126,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 
     \resumeSubheading
       {\href{https://americantours.com/}{AmericanTours International, LLC}}{via \href{https://nearsoft.com}{Nearsoft}}
-      {Software Engineer}{Nov 2019 – Mar 2020}
+      {Software Engineer (Remote)}{Nov 2019 – Mar 2020}
       {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
       \resumeItemListStart
         \resumeItem
@@ -153,7 +153,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 
     \resumeSubheading
       {\href{https://www.switchfly.com/}{Switchfly, LLC}}{via \href{https://nearsoft.com}{Nearsoft}}
-      {Software Engineer}{Feb 2014 – Aug 2019}
+      {Software Engineer (Remote)}{Feb 2014 – Aug 2019}
       {\footnotesize Technologies: JavaScript, Java, HTML, CSS, Sass (SCSS), Ember.js, Handlebars.js, Git, Gulp, JSHint, Karma, Mocha, Chai, npm, jQuery, Selenium, Jenkins, Ant, Maven, FreeMarker, ColdFusion, PostgreSQL, IntelliJ IDEA}
       \resumeItemListStart
         \resumeItem
@@ -178,9 +178,9 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 
     \resumeSubheading
       {\href{https://evolvemediallc.com/}{Evolve Media, LLC}}{via \href{https://intugo.co/}{Intugo}}
-      {Senior Software Engineer}{Jul 2013 – Feb 2014\vspace{-5pt}}
+      {Senior Software Engineer (Remote)}{Jul 2013 – Feb 2014\vspace{-5pt}}
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-        \textit{\small{Software Engineer}} & \textit{\small{Jul 2012 – Jul 2013}}\vspace{5pt} \\
+        \textit{\small{Software Engineer (Remote)}} & \textit{\small{Jul 2012 – Jul 2013}}\vspace{5pt} \\
       \end{tabular*}\vspace{-0pt}
       {\footnotesize Technologies: JavaScript, PHP, WordPress, HTML, CSS with Sass (SCSS), Compass, and Susy, jQuery, SVN with git-svn, Jenkins, Ant, npm, Grunt, JSHint, Capistrano}
       \resumeItemListStart
@@ -190,7 +190,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 
     \resumeSubheading
       {\href{https://www.optum.com/}{OptumInsight}}{via \href{https://nearsoft.com}{Nearsoft}}
-      {Application Development Engineer}{Jan 2009 – Jun 2012}
+      {Application Development Engineer (Remote)}{Jan 2009 – Jun 2012}
       {\footnotesize Technologies: Java, Java EE, Servlets, JavaScript, LotusScript, Formula Language, Lotus Notes, Lotus Domino, Tomcat, HTML, CSS, XML, XPath, XSLT, SVN, CVS, RCS, Maven, Ant, Make, Jenkins}
       \resumeItemListStart
         \resumeItem
