chore: Shorten name

--- a/resume.tex
+++ b/resume.tex
@@ -98,7 +98,7 @@
 % ==========================================================================
 
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\Large Alejandro Beltrán Coronado} & Email: \href{mailto:alebelcor@gmail.com}{\underline{alebelcor@gmail.com}}\\
+  \textbf{\Large Alejandro Beltran} & Email: \href{mailto:alebelcor@gmail.com}{\underline{alebelcor@gmail.com}}\\
   & GitHub: \href{https://github.com/alebelcor}{\underline{github.com/alebelcor}} \\
   & LinkedIn: \href{https://linkedin.com/in/alebelcor}{\underline{linkedin.com/in/alebelcor}} \\ \\
 \end{tabular*}
