feat: Add details to latest position

--- a/resume.tex
+++ b/resume.tex
@@ -118,10 +118,22 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
     \resumeSubheading
       {\href{https://www.consumertrack.com/}{ConsumerTrack, Inc.}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Front End Engineer (Remote)}{Apr 2020 – Present}
-      {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), Twig, React, Redux, Next.js, Bootstrap, Node.js, npm, Jest, React Testing Library, Babel, ESLint, Husky, Webpack, CircleCI, jQuery, PostCSS, Visual Studio Code, Git}
+      {\footnotesize Technologies: JavaScript, React, Redux, Next.js, HTML, CSS, Sass (SCSS), Twig, Bootstrap, Node.js, npm, Jest, React Testing Library, Babel, ESLint, Husky, Webpack, CircleCI, jQuery, PostCSS, Visual Studio Code, Git}
       \resumeItemListStart
         \resumeItem
           {Focused on Front End Engineering for multiple sites that offer consumers fast and easy online access to their credit score and credit monitoring services via the three national credit bureaus: Experian, Equifax, and TransUnion}
+        \resumeItem
+          {Leading Web performance efforts to improve our PageSpeed score and Web Vitals as part of our team mission.}
+        \resumeItem
+          {Increased PageSpeed score by +2 points (mobile) and +5 points (desktop) as a result of 37\% reduction in file size for (uncompressed) CSS.}
+        \resumeItem
+          {Increased PageSpeed score by +3 points (mobile) and +2 points (desktop) as a result of 33\% improvement in file size for image optimization.}
+        \resumeItem
+          {Increased PageSpeed score by +11 points (mobile) and +8 points (desktop) in PageSpeed score as a result of 43\% improvement in file size for using next-gen image formats (e.g. \texttt{.jp2}, \texttt{.webp}).}
+        \resumeItem
+          {Implemented A/B tests and experiments to determine the most successful variation to integrate and help increase revenue, gross profit, GPM, and various other C2C rates.}
+        \resumeItem
+          {Implemented automation of data management for CCPA compliance and to reduce the manual work of over 600 inquiries per month for "Delete My Data", "See My Data" and "Do Not Sell My Data" requests.}
       \resumeItemListEnd
 
     \resumeSubheading
