feat: Add styling to links

--- a/resume.tex
+++ b/resume.tex
@@ -116,20 +116,22 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {\href{https://www.consumertrack.com/}{ConsumerTrack, Inc.}}{via \href{https://nearsoft.com}{Nearsoft}}
+      {\href{https://www.consumertrack.com/}{\underline{ConsumerTrack, Inc.}}}{via \href{https://nearsoft.com}{\underline{Nearsoft}}}
       {Front End Engineer (Remote)}{Apr 2020 – Present}
       {\footnotesize Technologies: JavaScript, React, Redux, Next.js, HTML, CSS, Sass (SCSS), Twig, Bootstrap, Node.js, npm, Jest, React Testing Library, Babel, ESLint, Husky, Webpack, CircleCI, jQuery, PostCSS, Visual Studio Code, Git}
       \resumeItemListStart
         \resumeItem
-          {Focused on Front End Engineering for multiple sites that offer consumers fast and easy online access to their credit score and credit monitoring services via the three national credit bureaus: Experian, Equifax, and TransUnion}
+          {Focused on Front End Engineering for \href{https://www.importantscore.com}{\underline{ImportantScore.com}} and \href{https://www.goofreecredit.com}{\underline{GOFreeCredit.com}} that offer consumers fast and easy online access to their credit score and credit monitoring services via the three national credit bureaus: Experian, Equifax, and TransUnion}
         \resumeItem
-          {Leading Web performance efforts to improve our PageSpeed score and Web Vitals as part of our team mission.}
+          {Lead Web performance efforts to improve our PageSpeed score and Web Vitals as part of our team mission.}
         \resumeItem
           {Increased PageSpeed score by +2 points (mobile) and +5 points (desktop) as a result of 37\% reduction in file size for (uncompressed) CSS.}
         \resumeItem
-          {Increased PageSpeed score by +3 points (mobile) and +2 points (desktop) as a result of 33\% improvement in file size for image optimization.}
+          {Increased PageSpeed score by +3 points (mobile) and +2 points (desktop) as a result of 33\% improvement in file size with image optimization.}
         \resumeItem
           {Increased PageSpeed score by +11 points (mobile) and +8 points (desktop) in PageSpeed score as a result of 43\% improvement in file size for using next-gen image formats (e.g. \texttt{.jp2}, \texttt{.webp}).}
+        \resumeItem
+          {Implemented several other performances optimizations: visible text during webfont load, reduced requests size, eliminated dead dependencies, added resource hints, asynchronous/lazy loading of render-blocking resources.}
         \resumeItem
           {Implemented A/B tests and experiments to determine the most successful variation to integrate and help increase revenue, gross profit, GPM, and various other C2C rates.}
         \resumeItem
@@ -137,7 +139,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
       \resumeItemListEnd
 
     \resumeSubheading
-      {\href{https://americantours.com/}{AmericanTours International, LLC}}{via \href{https://nearsoft.com}{Nearsoft}}
+      {\href{https://americantours.com/}{\underline{AmericanTours International, LLC}}}{via \href{https://nearsoft.com}{\underline{Nearsoft}}}
       {Software Engineer (Remote)}{Nov 2019 – Mar 2020}
       {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
       \resumeItemListStart
@@ -164,7 +166,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
       \resumeItemListEnd
 
     \resumeSubheading
-      {\href{https://www.switchfly.com/}{Switchfly, LLC}}{via \href{https://nearsoft.com}{Nearsoft}}
+      {\href{https://www.switchfly.com/}{\underline{Switchfly, LLC}}}{via \href{https://nearsoft.com}{\underline{Nearsoft}}}
       {Software Engineer (Remote)}{Feb 2014 – Aug 2019}
       {\footnotesize Technologies: JavaScript, Java, HTML, CSS, Sass (SCSS), Ember.js, Handlebars.js, Git, Gulp, JSHint, Karma, Mocha, Chai, npm, jQuery, Selenium, Jenkins, Ant, Maven, FreeMarker, ColdFusion, PostgreSQL, IntelliJ IDEA}
       \resumeItemListStart
@@ -177,7 +179,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
         \resumeItem
           {Increased performance by reducing/consolidating–and compression–of Ajax HTTP requests/responses.}
         \resumeItem
-          {Integrated PAYBACK® and Masterpass™ payments into checkout process.}
+          {Integrated \href{https://www.payback.net/de/en/home/}{\underline{PAYBACK}}® and \href{https://www.mastercard.us/}{\underline{Masterpass}}™ payments into checkout process.}
         \resumeItem
           {Added automated end-to-end test cases for all new features in Selenium Java.}
         \resumeItem
@@ -189,7 +191,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
       \resumeItemListEnd
 
     \resumeSubheading
-      {\href{https://evolvemediallc.com/}{Evolve Media, LLC}}{via \href{https://intugo.co/}{Intugo}}
+      {\href{https://evolvemediallc.com/}{\underline{Evolve Media, LLC}}}{via \href{https://intugo.co/}{\underline{Intugo}}}
       {Senior Software Engineer (Remote)}{Jul 2013 – Feb 2014\vspace{-5pt}}
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
         \textit{\small{Software Engineer (Remote)}} & \textit{\small{Jul 2012 – Jul 2013}}\vspace{5pt} \\
@@ -198,10 +200,12 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
       \resumeItemListStart
         \resumeItem
           {Worked as Software Engineer focused on Front End Engineering for multiple heavily trafficked and highly ranked websites targeting, among other things: women, fashion, sports, gaming and entertainment.}
+        \resumeItem
+          {Examples: \href{https://www.thefashionspot.com/}{\underline{theFashionSpot}}, \href{https://www.momtastic.com/}{\underline{Momtastic}}, \href{https://www.superherohype.com/}{\underline{SuperHeroHype}}}
       \resumeItemListEnd
 
     \resumeSubheading
-      {\href{https://www.optum.com/}{OptumInsight}}{via \href{https://nearsoft.com}{Nearsoft}}
+      {\href{https://www.optum.com/}{\underline{OptumInsight}}}{via \href{https://nearsoft.com}{\underline{Nearsoft}}}
       {Application Development Engineer (Remote)}{Jan 2009 – Jun 2012}
       {\footnotesize Technologies: Java, Java EE, Servlets, JavaScript, LotusScript, Formula Language, Lotus Notes, Lotus Domino, Tomcat, HTML, CSS, XML, XPath, XSLT, SVN, CVS, RCS, Maven, Ant, Make, Jenkins}
       \resumeItemListStart
