chore: Update education language

--- a/resume.tex
+++ b/resume.tex
@@ -225,7 +225,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Instituto Tecnológico de Hermosillo}{Hermosillo, MX}
+      {Institute of Technology of Hermosillo}{Hermosillo, MX}
       {Bachelor of Computer Systems Engineering}{Dec 2008}
   \resumeSubHeadingListEnd
 
