--- a/resume.tex
+++ b/resume.tex
@@ -20,6 +20,7 @@
 \usepackage{fancyhdr}
 \usepackage[english]{babel}
 \usepackage{tabularx}
+\usepackage{tikz}
 
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
@@ -84,6 +85,27 @@
 \newcommand{\resumeItemListStart}{\begin{itemize}}
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
+\newcommand{\ExternalLink}{%
+    \tikz[x=1.2ex, y=1.2ex, baseline=-0.05ex]{%
+        \begin{scope}[x=1ex, y=1ex]
+            \clip (-0.1,-0.1)
+                --++ (-0, 1.2)
+                --++ (0.6, 0)
+                --++ (0, -0.6)
+                --++ (0.6, 0)
+                --++ (0, -1);
+            \path[draw,
+                line width = 0.5,
+                rounded corners=0.5]
+                (0,0) rectangle (1,1);
+        \end{scope}
+        \path[draw, line width = 0.5] (0.5, 0.5)
+            -- (1, 1);
+        \path[draw, line width = 0.5] (0.6, 1)
+            -- (1, 1) -- (1, 0.6);
+        }
+    }
+
 % ==========================================================================
 
 
@@ -98,9 +120,9 @@
 % ==========================================================================
 
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\Large Alejandro Beltran} & Email: \href{mailto:alebelcor@gmail.com}{\underline{alebelcor@gmail.com}}\\
-  & GitHub: \href{https://github.com/alebelcor}{\underline{github.com/alebelcor}} \\
-  & LinkedIn: \href{https://linkedin.com/in/alebelcor}{\underline{linkedin.com/in/alebelcor}} \\ \\
+  \textbf{\Large Alejandro Beltran} & Email: \href{mailto:alebelcor@gmail.com}{\underline{alebelcor@gmail.com} \ExternalLink}\\
+  & GitHub: \href{https://github.com/alebelcor}{github.com/alebelcor \ExternalLink} \\
+  & LinkedIn: \href{https://linkedin.com/in/alebelcor}{linkedin.com/in/alebelcor \ExternalLink} \\ \\
 \end{tabular*}
 
 I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of experience with a specialty and passion for UI, Web performance, and Web accessibility.
@@ -116,12 +138,12 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {\href{https://www.consumertrack.com/}{\underline{ConsumerTrack, Inc.}}}{via \href{https://nearsoft.com}{\underline{Nearsoft}}}
+      {\href{https://www.consumertrack.com/}{ConsumerTrack, Inc. \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Front End Engineer (Remote)}{Apr 2020 – Present}
       {\footnotesize Technologies: JavaScript, React, Redux, Next.js, HTML, CSS, Sass (SCSS), Twig, Bootstrap, Node.js, npm, Jest, React Testing Library, Babel, ESLint, Husky, Webpack, CircleCI, jQuery, PostCSS, Visual Studio Code, Git}
       \resumeItemListStart
         \resumeItem
-          {Focused on Front End Engineering for \href{https://www.importantscore.com}{\underline{ImportantScore.com}} and \href{https://www.goofreecredit.com}{\underline{GOFreeCredit.com}} that offer consumers fast and easy online access to their credit score and credit monitoring services via the three national credit bureaus: Experian, Equifax, and TransUnion}
+          {Focused on Front End Engineering for \href{https://www.importantscore.com}{ImportantScore.com \ExternalLink} and \href{https://www.goofreecredit.com}{GOFreeCredit.com \ExternalLink} that offer consumers fast and easy online access to their credit score and credit monitoring services via the three national credit bureaus: Experian, Equifax, and TransUnion}
         \resumeItem
           {Lead Web performance efforts to improve our PageSpeed score and Web Vitals as part of our team mission.}
         \resumeItem
@@ -139,7 +161,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
       \resumeItemListEnd
 
     \resumeSubheading
-      {\href{https://americantours.com/}{\underline{AmericanTours International, LLC}}}{via \href{https://nearsoft.com}{\underline{Nearsoft}}}
+      {\href{https://americantours.com/}{AmericanTours International, LLC \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Software Engineer (Remote)}{Nov 2019 – Mar 2020}
       {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
       \resumeItemListStart
@@ -166,7 +188,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
       \resumeItemListEnd
 
     \resumeSubheading
-      {\href{https://www.switchfly.com/}{\underline{Switchfly, LLC}}}{via \href{https://nearsoft.com}{\underline{Nearsoft}}}
+      {\href{https://www.switchfly.com/}{Switchfly, LLC \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Software Engineer (Remote)}{Feb 2014 – Aug 2019}
       {\footnotesize Technologies: JavaScript, Java, HTML, CSS, Sass (SCSS), Ember.js, Handlebars.js, Git, Gulp, JSHint, Karma, Mocha, Chai, npm, jQuery, Selenium, Jenkins, Ant, Maven, FreeMarker, ColdFusion, PostgreSQL, IntelliJ IDEA}
       \resumeItemListStart
@@ -179,7 +201,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
         \resumeItem
           {Increased performance by reducing/consolidating–and compression–of Ajax HTTP requests/responses.}
         \resumeItem
-          {Integrated \href{https://www.payback.net/de/en/home/}{\underline{PAYBACK}}® and \href{https://www.mastercard.us/}{\underline{Masterpass}}™ payments into checkout process.}
+          {Integrated \href{https://www.payback.net/de/en/home/}{PAYBACK® \ExternalLink} and \href{https://www.mastercard.us/}{Masterpass™ \ExternalLink} payments into checkout process.}
         \resumeItem
           {Added automated end-to-end test cases for all new features in Selenium Java.}
         \resumeItem
@@ -191,7 +213,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
       \resumeItemListEnd
 
     \resumeSubheading
-      {\href{https://evolvemediallc.com/}{\underline{Evolve Media, LLC}}}{via \href{https://intugo.co/}{\underline{Intugo}}}
+      {\href{https://evolvemediallc.com/}{Evolve Media, LLC \ExternalLink}}{via \href{https://intugo.co/}{Intugo}}
       {Senior Software Engineer (Remote)}{Jul 2013 – Feb 2014\vspace{-5pt}}
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
         \textit{\small{Software Engineer (Remote)}} & \textit{\small{Jul 2012 – Jul 2013}}\vspace{5pt} \\
@@ -201,11 +223,11 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
         \resumeItem
           {Worked as Software Engineer focused on Front End Engineering for multiple heavily trafficked and highly ranked websites targeting, among other things: women, fashion, sports, gaming and entertainment.}
         \resumeItem
-          {Examples: \href{https://www.thefashionspot.com/}{\underline{theFashionSpot}}, \href{https://www.momtastic.com/}{\underline{Momtastic}}, \href{https://www.superherohype.com/}{\underline{SuperHeroHype}}}
+          {Examples: \href{https://www.thefashionspot.com/}{theFashionSpot \ExternalLink}, \href{https://www.momtastic.com/}{Momtastic \ExternalLink}, \href{https://www.superherohype.com/}{SuperHeroHype \ExternalLink}}
       \resumeItemListEnd
 
     \resumeSubheading
-      {\href{https://www.optum.com/}{\underline{OptumInsight}}}{via \href{https://nearsoft.com}{\underline{Nearsoft}}}
+      {\href{https://www.optum.com/}{OptumInsight \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Application Development Engineer (Remote)}{Jan 2009 – Jun 2012}
       {\footnotesize Technologies: Java, Java EE, Servlets, JavaScript, LotusScript, Formula Language, Lotus Notes, Lotus Domino, Tomcat, HTML, CSS, XML, XPath, XSLT, SVN, CVS, RCS, Maven, Ant, Make, Jenkins}
       \resumeItemListStart
@@ -237,17 +259,17 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 % ==========================================================================
 
 \section{Skills}
- \resumeSubHeadingListStart
-   \item{
-     \textbf{Software Engineering}{: Agile Software Development, Software Release Cycle, Unit Testing, Integration Testing, End-to-end Testing, Continuous Integration, Software Security, Static Code Analysis}
-   }
-   \item{
-    \textbf{Front End (Web)}{: HTML, CSS, JavaScript, Web Performance, Web Accessibility, React, React Hooks, Redux, CSS-in-JS, Sass (SCSS), Bootstrap}
-   }
-   \item{
-    \textbf{Tools}{: Node.js, npm, Yarn, ESLint, Prettier, Jest, React Testing Library, Git, Visual Studio Code}
-   }
- \resumeSubHeadingListEnd
+  \resumeSubHeadingListStart
+    \item{
+      \textbf{Software Engineering}{: Agile Software Development, Software Release Cycle, Unit Testing, Integration Testing, End-to-end Testing, Continuous Integration, Software Security, Static Code Analysis}
+    }
+    \item{
+      \textbf{Front End (Web)}{: HTML, CSS, JavaScript, Web Performance, Web Accessibility, React, React Hooks, Redux, CSS-in-JS, Sass (SCSS), Bootstrap}
+    }
+    \item{
+      \textbf{Tools}{: Node.js, npm, Yarn, ESLint, Prettier, Jest, React Testing Library, Git, Visual Studio Code}
+    }
+  \resumeSubHeadingListEnd
 
 % ==========================================================================
 
