feat: Add new certifications section

--- a/resume.tex
+++ b/resume.tex
@@ -255,6 +255,26 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 
 
 % ==========================================================================
+% Certifications
+% ==========================================================================
+
+\section{Certifications}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {\href{https://www.freecodecamp.org/certification/alebelcor/responsive-web-design}{Responsive Web Design \ExternalLink}}{freeCodeCamp}
+      {}{}\vspace{-20pt}
+    \resumeSubheading
+      {\href{https://www.freecodecamp.org/certification/alebelcor/javascript-algorithms-and-data-structures}{JavaScript Algorithms and Data Structures \ExternalLink}}{freeCodeCamp}
+      {}{}\vspace{-20pt}
+    \resumeSubheading
+      {Scrum Foundation Professional Certificate}{Scrum Foundation}
+      {ID: TLSZSQSVHG-MMSTYQSQ-RPFDLKRHJT}{}
+  \resumeSubHeadingListEnd
+
+% ==========================================================================
+
+
+% ==========================================================================
 % Skills
 % ==========================================================================
 
