fix: School name

--- a/resume.tex
+++ b/resume.tex
@@ -241,7 +241,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Institute of Technology of Hermosillo}{Hermosillo, MX}
+      {Hermosillo Institute of Technology}{Hermosillo, MX}
       {Bachelor of Computer Systems Engineering}{Dec 2008}
   \resumeSubHeadingListEnd
 
