style: Remove underline from email

--- a/resume.tex
+++ b/resume.tex
@@ -120,7 +120,7 @@
 % ==========================================================================
 
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\Large Alejandro Beltran} & Email: \href{mailto:alebelcor@gmail.com}{\underline{alebelcor@gmail.com} \ExternalLink}\\
+  \textbf{\Large Alejandro Beltran} & Email: alebelcor@gmail.com\\
   & GitHub: \href{https://github.com/alebelcor}{github.com/alebelcor \ExternalLink} \\
   & LinkedIn: \href{https://linkedin.com/in/alebelcor}{linkedin.com/in/alebelcor \ExternalLink} \\ \\
 \end{tabular*}
