fix: Update title

--- a/resume.tex
+++ b/resume.tex
@@ -156,7 +156,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 
     \resumeSubheading
       {\href{https://americantours.com/}{AmericanTours International, LLC \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
-      {Software Engineer (Remote)}{Nov 2019 – Mar 2020}
+      {Front End Engineer (Remote)}{Nov 2019 – Mar 2020}
       {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
       \resumeItemListStart
         \resumeItem
