fix: Update multi-position syntax. Move tech down

--- a/resume.tex
+++ b/resume.tex
@@ -66,14 +66,14 @@
   \vspace{0pt}\item
     \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
-      \textit{\small#3} & \textit{\small #4}\vspace{5pt}\\
-    \end{tabular*}\vspace{0pt}
+      \textit{\small#3} & \textit{\small #4}\\
+    \end{tabular*}
 }
 
 \newcommand{\resumeSubSubheading}[2]{
   \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-    \textit{\small#1} & \textit{\small #2} \\
-  \end{tabular*}\vspace{-5pt}
+    \textit{\small#1} & \textit{\small #2}\\
+  \end{tabular*}
 }
 
 \newcommand{\resumeSubItem}[2]{\resumeItem{#1}{#2}\vspace{-4pt}}
@@ -140,7 +140,6 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
     \resumeSubheading
       {\href{https://www.consumertrack.com/}{ConsumerTrack, Inc. \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Front End Engineer (Remote)}{Apr 2020 – Present}
-      {\footnotesize Technologies: JavaScript, React, Redux, Next.js, HTML, CSS, Sass (SCSS), Twig, Bootstrap, Node.js, npm, Jest, React Testing Library, Babel, ESLint, Husky, Webpack, CircleCI, jQuery, PostCSS, Visual Studio Code, Git}
       \resumeItemListStart
         \resumeItem
           {Focused on Front End Engineering for \href{https://www.importantscore.com}{ImportantScore.com \ExternalLink} and \href{https://www.goofreecredit.com}{GOFreeCredit.com \ExternalLink} that offer consumers fast and easy online access to their credit score and credit monitoring services via the three national credit bureaus: Experian, Equifax, and TransUnion}
@@ -153,11 +152,11 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
         \resumeItem
           {Implemented automation of data management for CCPA compliance and to reduce the manual work of over 600 inquiries per month for "Delete My Data", "See My Data" and "Do Not Sell My Data" requests.}
       \resumeItemListEnd
+      {\footnotesize Tech: JavaScript, React, Redux, Next.js, HTML, CSS, Sass (SCSS), Twig, Bootstrap, Node.js, npm, Jest, React Testing Library, Babel, ESLint, Husky, Webpack, CircleCI, jQuery, PostCSS, Visual Studio Code, Git}
 
     \resumeSubheading
       {\href{https://americantours.com/}{AmericanTours International, LLC \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Front End Engineer (Remote)}{Nov 2019 – Mar 2020}
-      {\footnotesize Technologies: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
       \resumeItemListStart
         \resumeItem
           {Led an engineering team of two in charge of implementing a modern, fast, and aesthetic re-imagining of ATI's internal administration tool used by travel agents for payment and transaction review, and processing.}
@@ -180,11 +179,11 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
         \resumeItem
           {Integrated code linting and auto-formatting for JS/JSX files as part of test suite, and VS Code.}
       \resumeItemListEnd
+      {\footnotesize Tech: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
 
     \resumeSubheading
       {\href{https://www.switchfly.com/}{Switchfly, LLC \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Software Engineer (Remote)}{Feb 2014 – Aug 2019}
-      {\footnotesize Technologies: JavaScript, Java, HTML, CSS, Sass (SCSS), Ember.js, Handlebars.js, Git, Gulp, JSHint, Karma, Mocha, Chai, npm, jQuery, Selenium, Jenkins, Ant, Maven, FreeMarker, ColdFusion, PostgreSQL, IntelliJ IDEA}
       \resumeItemListStart
         \resumeItem
           {Implemented interstitial/loading page for better SEO and accessibility.}
@@ -205,29 +204,29 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
         \resumeItem
           {Peer-reviewed other people's code as "Subject Matter Expect" of the shopping experience.}
       \resumeItemListEnd
+      {\footnotesize Tech: JavaScript, Java, HTML, CSS, Sass (SCSS), Ember.js, Handlebars.js, Git, Gulp, JSHint, Karma, Mocha, Chai, npm, jQuery, Selenium, Jenkins, Ant, Maven, FreeMarker, ColdFusion, PostgreSQL, IntelliJ IDEA}
 
     \resumeSubheading
       {\href{https://evolvemediallc.com/}{Evolve Media, LLC \ExternalLink}}{via \href{https://intugo.co/}{Intugo}}
-      {Senior Software Engineer (Remote)}{Jul 2013 – Feb 2014\vspace{-5pt}}
-      \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-        \textit{\small{Software Engineer (Remote)}} & \textit{\small{Jul 2012 – Jul 2013}}\vspace{5pt} \\
-      \end{tabular*}\vspace{-0pt}
-      {\footnotesize Technologies: JavaScript, PHP, WordPress, HTML, CSS with Sass (SCSS), Compass, and Susy, jQuery, SVN with git-svn, Jenkins, Ant, npm, Grunt, JSHint, Capistrano}
-      \resumeItemListStart
+      {Senior Software Engineer (Remote)}{Jul 2013 – Feb 2014}
+      \resumeSubSubheading
+        {Software Engineer (Remote)}{Jul 2012 – Jul 2013}
+        \resumeItemListStart
         \resumeItem
           {Worked as Software Engineer focused on Front End Engineering for multiple heavily trafficked and highly ranked websites targeting, among other things: women, fashion, sports, gaming and entertainment.}
         \resumeItem
           {Examples: \href{https://www.thefashionspot.com/}{theFashionSpot \ExternalLink}, \href{https://www.momtastic.com/}{Momtastic \ExternalLink}, \href{https://www.superherohype.com/}{SuperHeroHype \ExternalLink}}
-      \resumeItemListEnd
+          \resumeItemListEnd
+      {\footnotesize Tech: JavaScript, PHP, WordPress, HTML, CSS with Sass (SCSS), Compass, and Susy, jQuery, SVN with git-svn, Jenkins, Ant, npm, Grunt, JSHint, Capistrano}
 
     \resumeSubheading
       {\href{https://www.optum.com/}{OptumInsight \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
       {Application Development Engineer (Remote)}{Jan 2009 – Jun 2012}
-      {\footnotesize Technologies: Java, Java EE, Servlets, JavaScript, LotusScript, Formula Language, Lotus Notes, Lotus Domino, Tomcat, HTML, CSS, XML, XPath, XSLT, SVN, CVS, RCS, Maven, Ant, Make, Jenkins}
       \resumeItemListStart
         \resumeItem
           {Worked as Application Development Engineer extending and maintaining their EMR Lite system, related services and applications.}
       \resumeItemListEnd
+      {\footnotesize Tech: Java, Java EE, Servlets, JavaScript, LotusScript, Formula Language, Lotus Notes, Lotus Domino, Tomcat, HTML, CSS, XML, XPath, XSLT, SVN, CVS, RCS, Maven, Ant, Make, Jenkins}
 
   \resumeSubHeadingListEnd
 
